--- a/src/main/resources/templates/girlfriend.html
+++ b/src/main/resources/templates/girlfriend.html
@@ -34,7 +34,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- header -->
         <div class="header-inner">
             <h1 class="logo">
-                <a href="index.html">甜蜜<span>Sweet</span></a></h1>
+                <a href="../basic_message/listAll">甜蜜<span>Sweet</span></a></h1>
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse"
