--- a/src/main/resources/templates/GeRen.html
+++ b/src/main/resources/templates/GeRen.html
@@ -80,17 +80,21 @@
 
 <!--顶部-->
 
+<span th:each="v : ${myvip}">
+    <input type="hidden" th:value="${v.VIP}" name="VIP" id="pvip">
+</span>
 
 <!--主体-->
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2">
-            <a class="list-group-item active">个人管理</a>
+            <a class="list-group-item active" style="background: black">个人管理&nbsp;&nbsp;<img src="../images/novip.png" id="imgvip"></a>
             <a href="../basic_message/Selmate"  target="myframe" class="list-group-item"><img src="../images/tubiao1.png">基本信息</a>
             <a href="../Details_message/SelDetails" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">详细信息</a>
             <a href="../life_message/Selmate" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">生活信息</a>
             <a href="../choose_mate/Selmate" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">择偶标准</a>
+            <a href="../vip/myvip" target="myframe" class="list-group-item" id="mya"><img src="../images/tubiao1.png">我的会员</a>
         </div>
         <div class="col-sm-10">
             <iframe name="myframe" src="../Details_message/SelDetails" width="1110" height="540" frameborder="0" scrolling="Yes"></iframe>
@@ -98,5 +102,22 @@
     </div>
 </div>
 
+<script type='text/javascript' src='../js/jquery-2.2.3.min.js'></script>
+<script type="text/javascript">
+
+    $(document).ready(function () {
+        let vs=$("#pvip").val();
+        //查询不到数据
+        if(vs==undefined){
+            //没有开会员，隐藏会员导航
+            $("#mya").css("visibility","hidden");
+        }
+        //如果是会员设置会员标志
+        if(vs==0){
+            $("#imgvip").attr("src","../images/SVIP.png");
+        }
+    });
+
+</script>
 </body>
 </html>
