--- a/src/main/resources/templates/life_message.html
+++ b/src/main/resources/templates/life_message.html
@@ -35,7 +35,7 @@
     <div class="form-group" style="margin-top:20px;">
         <label for="ptid">职业类型</label><br>
         <select class="form-control" id="ptid" name="ptid" style="width: 500px; display: inline-block" >
-            <option value="0" th:selected="${Dlist.ptid==0}">不限</option>
+            <option value="22" th:selected="${Dlist.ptid==22}">无</option>
             <option value="1" th:selected="${Dlist.ptid==1}">销售</option>
             <option value="2" th:selected="${Dlist.ptid==2}">客户服务</option>
             <option value="3" th:selected="${Dlist.ptid==3}">计算机/互联网</option>
