--- a/src/main/resources/templates/basic_message.html
+++ b/src/main/resources/templates/basic_message.html
@@ -3,19 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>basic_message</title>
-    <!--*导入bootstarp的css-->
+    <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css" type="text/css" media="all">
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" media="all"/>
     <link href="../css/toastr.min.css" rel="stylesheet" type="text/css" media="all">
-    <!--*先导入jQuery-->
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <!--*再导入以jQuery为基础的bootstrap的js-->
+    <script src="../js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="../js/moment-with-locales.js" type="text/javascript"></script>
+    <script src="../js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap-3.1.1.min.js"></script>
+    <!--*导入bootstarp的css-->
+    <!--<link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" media="all"/>
+    <link href="../css/toastr.min.css" rel="stylesheet" type="text/css" media="all">
+    &lt;!&ndash;*先导入jQuery&ndash;&gt;
+    <script src="../js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="../js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+    <script src="../js/moment-with-locales.js" type="text/javascript"></script>
+    &lt;!&ndash;*再导入以jQuery为基础的bootstrap的js&ndash;&gt;
+    <script src="../js/bootstrap-3.1.1.min.js"></script>-->
     <script type="text/javascript" src="../js/toastr.min.js"></script>
     <script type="text/javascript">
         //非空校验
         function isNull(param){
             if(param==null||param==""){
                 toastr.warning("内容不可为空");
+                return false;
+            }
+            return true;
+        }
+        //年龄
+        function nl(){
+            let val=$("#age").val();
+            //调用方法判断是否为空
+            if (!isNull(val)){
+                return false;
+            }
+            return true;
+        }
+        function csrqjy(){
+            let val=$("#birthday").val();
+            //调用方法判断是否为空
+            if (!isNull(val)){
                 return false;
             }
             return true;
@@ -29,11 +56,11 @@
             }
             return true;
         }
-        //s手机号校验
+        //手机号校验
         function sjh(){
             let val=$("#phone").val();
             let re = /^1[3456789]\d{9}$/;
-                //调用方法判断是否为空
+            //调用方法判断是否为空
             if (!isNull(val)){
                 return false;
             }
@@ -52,12 +79,12 @@
             /*toastr.warning("弹出框居中");*/
             //总校验
             $("#bzjy").submit( function () {
-                if(mc()&&sjh()){
+                if(csrqjy()&&mc()&&nl()&&sjh()){
                     return true;
                 }
                 return false;
             })
-      })
+        })
 
         $(function () {
             //设置所有文本框/按钮/下拉框为不可用
@@ -76,8 +103,34 @@
                 $("#vip").attr("disabled","true");
 
             })
-        })
+        });
+        //出生日期
+        var myDate = new Date();
+        var year = myDate.getFullYear();
+        let date = new Date();
+        var month = date.getMonth() + 1;
+        var months = year + '-' + month;
+        $(function() {
+            $('#form1').hide();
+            var picker1 = $('#datetimepicker1').datetimepicker({
+                format: 'YYYY-MM-DD',
+                locale: moment.locale('zh-cn'),
+            });
+
+        });
+        $('#datetimepicker1').datetimepicker({
+            format: 'YYYY-MM-DD',
+            locale: moment.locale('zh-cn'),
+            defaultDate: months
+        });
+
     </script>
+    <style type="text/css">
+        .myrow {
+            display: flex;
+            flex-direction: row;
+        }
+    </style>
 </head>
 <body>
 <!--<span th:text="${Dlist}"></span>-->
@@ -86,9 +139,9 @@
 <form role="form" id="bzjy"action="UpdBasic" method="post" style="margin-left:200px;">
     <input type="hidden" name="bmid" th:value="${Dlist.bmid}">
     <input type="hidden" name="state" th:value="${Dlist.state}">
-    <input type="hidden" name="birthday" th:value="${Dlist.birthday}">
+    <!--<input type="hidden" name="birthday" th:value="${Dlist.birthday}">-->
     <input type="hidden" name="pwd" th:value="${Dlist.pwd}">
-    <input type="hidden" name="age" th:value="${Dlist.age}">
+    <!--<input type="hidden" name="age" th:value="${Dlist.age}">-->
     <input type="hidden" name="vip" th:value="${Dlist.vip}">
     <input type="hidden" name="number" th:value="${Dlist.number}">
     <div class="form-group" style="margin-top:20px;">
@@ -101,6 +154,23 @@
         <label for="bmname">名称</label>
         <input type="text" onblur="mc()" name="bmname" th:value="${Dlist.bmname}" class="form-control" id="bmname" style="width: 500px" maxlength="8">
     </div>
+    <div class="form-group">
+        <label for="age">年龄</label>
+        <input type="text"  onblur="nl()"name="age" th:value="${Dlist.age}" class="form-control" id="age" style="width: 500px" maxlength="2">
+    </div>
+
+    <div class="form-group ">
+        <label for="birthday">出生日期</label>
+        <div class="myrow">
+            <div class="input-group date" style="width: 500px;" id="datetimepicker1">
+                <input type="text" onblur="csrqjy()" class="timeInput form-control" id="birthday" th:value="${Dlist.birthday}" name="birthday" maxlength="10"/>
+                <span class="input-group-addon"  >
+                    <span class="glyphicon glyphicon-calendar" ></span>
+                </span>
+            </div>
+        </div>
+    </div>
+
     <div class="form-group">
         <label for="marriage">婚姻状态</label>
         <select class="form-control" id="marriage" name="marriage" style="width: 500px">
@@ -160,7 +230,7 @@
             <option value="金水区" th:selected="${Dlist.address=='金水区'}">金水区</option>
             <option value="中原区" th:selected="${Dlist.address=='中原区'}">中原区</option>
             <option value="二七区" th:selected="${Dlist.address=='二七区'}">二七区</option>
-            <option value="管城区" th:selected="${Dlist.address=='巩义市'}">管城区</option>
+            <option value="管城区" th:selected="${Dlist.address=='管城区'}">管城区</option>
             <option value="惠济区" th:selected="${Dlist.address=='惠济区'}">惠济区</option>
             <option value="上街区" th:selected="${Dlist.address=='上街区'}">上街区</option>
             <option value="新郑市" th:selected="${Dlist.address=='新郑市'}">新郑市</option>
