--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -336,7 +336,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!--/footer -->
 
-<a href="#YesOrNo" data-toggle="modal" id="tcBox">click</a>
+<a href="#YesOrNo" data-toggle="modal" id="tcBox" style="display: none">click</a>
+<a href="#YesOrNo2" data-toggle="modal" id="tpBox" style="display: none">click2</a>
+
 <!--确认取消提示框-->
 <div class="modal fade" id="YesOrNo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 	<div class="modal-dialog" role="document">
@@ -359,6 +361,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 </div>
+
+<!--确认取消提示框2-->
+<div class="modal fade" id="YesOrNo2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+				<h4 class="modal-title" id="exampleModalLabel2">置顶续费</h4>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="form-group">
+						<label class="control-label">您的置顶功能已到期是否续费？</label>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">返回</button>
+				<a class="btn btn-primary" href="../Top/showtop">确认</a>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- js -->
 <script type='text/javascript' src='../js/jquery-2.2.3.min.js'></script>
 <!-- flexisel -->
@@ -463,6 +489,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		$.post("../vip/VipTimelimit",function (data) {
 			if(data==0){
 				$("#tcBox").click();
+			}
+		});
+		$.post("../Top/TopTimelimit",function (data) {
+			if(data==0){
+				$("#tpBox").click();
 			}
 		})
 		
