--- a/src/main/resources/templates/ceshi.html
+++ b/src/main/resources/templates/ceshi.html
@@ -16,7 +16,7 @@
     <input type="hidden" name="WIDsubject" th:value="${WIDsubject}" required><br/>
     <input type="hidden" name="WIDtotal_amount" th:value="${WIDtotal_amount}" required><br/>
     <input type="hidden" name="WIDbody"><br/>
-    <input type="submit" value="下单">
+    <input type="submit" value="下单" style="display: none">
 </form>
 </body>
 </html>
