--- a/src/main/resources/templates/vips.html
+++ b/src/main/resources/templates/vips.html
@@ -117,7 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </span>
             <p style="margin-left: 60px;margin-top: 60px;color: yellow;font-size: 20px">----------------------------------------------------------------------------------&nbsp;&nbsp;会员权益&nbsp;&nbsp;-------------------------------------------------------------------------</p><br><br><br>
             <span style="margin-left: 70px;margin-top:50px">解锁你的收件箱</span><span style="margin-left:120px;margin-top:50px">解锁你的消息发送</span><span style="margin-left: 120px;margin-top:50px">尊贵甜蜜会员勋章</span><span style="margin-left: 120px;margin-top:50px">更多精准筛选条件</span><br><br><br><br><br>
-            <h1><a href="#"><span class="label label-warning" style="margin-left: 420px;color: #8a6d3b; background: yellow;width:120px;">热卖立即开通&nbsp;&nbsp;388元/年</span></a></h1>
+            <h1><span class="label label-warning" style="margin-left: 420px;color: #8a6d3b; background: yellow;width:120px;">热卖立即开通&nbsp;&nbsp;388元/年</span></h1>
         </div>
 
     </div>
