--- a/src/main/resources/templates/testClassroom.html
+++ b/src/main/resources/templates/testClassroom.html
@@ -100,23 +100,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="tittle-agileinfo">
             <h3>课堂</h3>
         </div>
-        <div class="team-row">
-            <span th:each="b : ${ct}">
-                <div class="col-md-3 w3ls-team-grids"
-                     style="margin-right: 20px;margin-bottom: 10px;height: 324px;width: 254px">
-                    <input type="hidden" th:value="${b.info}">
-                    <div class="agileits-social">
-                        <ul>
-                            <li style="margin-top: 50px"><a onclick="setTest(this)" href="#openTV"
-                                                            data-toggle="modal"><i class="fa fa-twitter">详</i></a></li>
-                        </ul>
-                    </div>
-                    <div class="team-img"
-                         style='background:url("/sweet/images/bijiben.jpg") no-repeat;background-size:100% 100%;'>
-                        <h5 th:text="${b.ctname}" style="margin-top: 120px"></h5>
-                    </div>
-                </div>
+        <div class="team-row">　
+            <span th:each="b : ${ct}">　
+            <div id="left" style="background-color: #0b0b0b;border: 1px solid white;height: 200px;width: 300px;float: left;color: white">
+                <h3 th:text="${b.ctname}" style="margin-top: 80px"></h3>
+            </div>
+             <input type="hidden" th:value="${b.info}">
+            <div id="right" style="background-color: whitesmoke;border-bottom: 1px solid black;height: 200px;width: 800px;float: left">
+                <p th:text="${b.info}" style="margin-top: 25px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp:5" ></p>
+               <!--<a onclick="setTest(this)" href="#openTV" ata-toggle="modal"><i class="fa fa-twitter">详</i></a>-->
+                <a onclick="setTest(this)" href="#openTV" data-toggle="modal">展开.....</a>
+            </div>
             </span>
+            <!--<span th:each="b : ${ct}">-->
+                <!--<div class="col-md-3 w3ls-team-grids"-->
+                     <!--style="margin-right: 20px;margin-bottom: 10px;height: 324px;width: 254px">-->
+                    <!--<input type="hidden" th:value="${b.info}">-->
+                    <!--<div class="agileits-social">-->
+                        <!--<ul>-->
+                            <!--<li style="margin-top: 50px"><a onclick="setTest(this)" href="#openTV"-->
+                                                            <!--data-toggle="modal"><i class="fa fa-twitter">详</i></a></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
+                    <!--<div class="team-img"-->
+                         <!--style='background:url("/sweet/images/bijiben.jpg") no-repeat;background-size:100% 100%;'>-->
+                        <!--<h5 th:text="${b.ctname}" style="margin-top: 120px"></h5>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</span>-->
         </div>
     </div>
 </section>
@@ -176,7 +187,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="modal-body">
                 <button type="button" id="closeb" class="close" data-dismiss="modal" aria-hidden="true"
                         style="margin-right: 10px">
-                    &times;
                 </button>
                 <div id="con">
                 </div>
@@ -288,7 +298,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     function setTest(isA) {
         //获取视频路径
-        let avlue = $(isA).parent("li").parent("ul").parent("div").prev().val();
+        let avlue = $(isA).parent("div").prev().val();
+
         //设置视频路径
         $("#con").html(avlue);
     }
